--- a/index.css
+++ b/index.css
@@ -47,9 +47,8 @@ body {
     color: #ffffff;
     font-family: "Bree Serif";
     font-size: 30px;
-    font-weight: 500;
+    font-weight: bold;
 }
-
 
 @media screen and (min-width: 768px) {
     .social-buttons-heading {
@@ -64,7 +63,7 @@ body {
     align-items: center;
 }
 
-@media screen and(min-width: 768px) {
+@media screen and (min-width: 768px) {
     .social-buttons-card {
         flex-direction: row;
     }
